--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
-    "inquirer": "^8.2.4",
-    "jest": "^28.1.3"
+    "inquirer": "^8.2.4"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
